--- a/HW4/ex2.html
+++ b/HW4/ex2.html
@@ -36,9 +36,19 @@
                 <label for="lname"; style="color:gray">Massage</label><br>
                 <textarea style="color:rgb(204, 196, 196)"> Enter your massage </textarea>
             </form>
-            <div role="group"; style="color:gray; padding-left:25px">
-                <input type="radio" name='abcd' /> I accept the Terms of Service <br>
-               
+            <div role="group"; 
+                 style="color:gray; 
+                        padding-left:25px; 
+                        padding-top:20px">
+                <input type="radio" 
+                       name='abcd' /> I accept the Terms of Service <br>
+            </div>
+            <div style="padding-left:105px; 
+                        padding-top:20px">
+                <input type="submit" 
+                       value="Submit your request" 
+                       style="background-color:rgb(11, 186, 255);
+                              width:150px">
             </div>
         </div>
     </div>
