--- a/HW6/ex2.html
+++ b/HW6/ex2.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="./../CSS/main.css">
 </head>
 <body>
-    
+    <div class="bg-blue relative">
+        <div class="bg-orange"> </div>
+        <div class="container-img">
+            <img class="img absolute" src="img5.jpg" alt="image">
+        </div>
+        <div class="bg-white">
+            <p>MEAL IDEAS</p>
+            <p>How to Lose Weight Fast in 3 Simple Steps</p>
+            <p>Images from <u>Freepik</u></p>
+        </div>
+    </div>
 </body>
 </html>
