--- a/HW6/ex2.html
+++ b/HW6/ex2.html
@@ -5,20 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style2.css">
-    <link rel="stylesheet" href="./../CSS/main.css">
+    <link rel="stylesheet" href="style2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="bg-blue relative">
-        <div class="bg-orange"> </div>
-        <div class="container-img">
-            <img class="img absolute" src="img5.jpg" alt="image">
-        </div>
-        <div class="bg-white">
-            <p>MEAL IDEAS</p>
-            <p>How to Lose Weight Fast in 3 Simple Steps</p>
-            <p>Images from <u>Freepik</u></p>
-        </div>
+    <div>
+       <div class="bg-blue"></div>
+       <div class="bg-orange"></div>
+       <img class="img" src="img5.jpg" alt="image">
+       <div class="text-box">
+            <div class="text-meal">
+                MEAL IDEAS 
+            </div>
+
+            <div class="text-how">
+                How to Lose Weight Fast in 3 Simple Steps
+            </div>
+
+            <div class="text-freepik">
+                <p>Image from <u>Freepik</u></p>
+            </div>
+            </div>
+       </div>
     </div>
 </body>
 </html>
