--- a/HW6/ex1.html
+++ b/HW6/ex1.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="all">
+    <div>
         <div class="layout-left text-black" style="display:inline-block">
             <div class="container-img">
                 <img class="img1" src="img1.jpg" alt="img1">
