--- a/HW8/ex1hw8.html
+++ b/HW8/ex1hw8.html
@@ -10,14 +10,28 @@
 <body>
     <div class="main">
         <div class="container">
-            <div class="item-left inline-block">
-                <img src="https://images.pexels.com/photos/127513/pexels-photo-127513.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic1">
+            <div class="item-left inline-block ">
+                <div class="text-left relative">
+                    Amazing Fisrt Title 
+                </div>
+                <p>Jan 29,2018</p>
+                <img src="https://images.pexels.com/photos/127513/pexels-photo-127513.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic1"> 
             </div>
-            <div class="item-center inline-block">
+
+            <div class="item-center inline-block relative">
                 <img src="https://images.pexels.com/photos/631954/pexels-photo-631954.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic2">
+                <div class="text-center">
+                    Amazing Second Title that is quite long
+                </div>
+                <p>Jan 29,2018</p>
             </div>
-            <div class="item-right inline-block">
+
+            <div class="item-right inline-block relative">
                 <img src="https://images.pexels.com/photos/248486/pexels-photo-248486.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic3">
+                <div class="text-right">
+                    Amazing Title
+                </div>
+                <p>Jan 29,2018</p>
             </div>
         </div>
     </div>
