--- a/HW8/ex1hw8.html
+++ b/HW8/ex1hw8.html
@@ -5,21 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style1hw8.css">
+    <link rel="stylesheet" href="style1hw8.css".css">
 </head>
 <body>
     <div class="main">
         <div class="container">
             <div class="item-left inline-block ">
+                <div>
+                    <img src="https://images.pexels.com/photos/127513/pexels-photo-127513.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic1">
+                </div>
                 <div class="text-left relative">
                     Amazing Fisrt Title 
                 </div>
                 <p>Jan 29,2018</p>
-                <img src="https://images.pexels.com/photos/127513/pexels-photo-127513.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic1"> 
+                <div>
+                </div>
+                 
             </div>
 
             <div class="item-center inline-block relative">
-                <img src="https://images.pexels.com/photos/631954/pexels-photo-631954.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic2">
+                <div>
+                    <img src="https://images.pexels.com/photos/631954/pexels-photo-631954.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic2">
+                </div>
                 <div class="text-center">
                     Amazing Second Title that is quite long
                 </div>
@@ -27,7 +34,9 @@
             </div>
 
             <div class="item-right inline-block relative">
-                <img src="https://images.pexels.com/photos/248486/pexels-photo-248486.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic3">
+                <div>
+                    <img src="https://images.pexels.com/photos/248486/pexels-photo-248486.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic3">
+                </div>
                 <div class="text-right">
                     Amazing Title
                 </div>
