--- a/HW8/ex1hw8.html
+++ b/HW8/ex1hw8.html
@@ -16,8 +16,8 @@
                 </div>
                 <div class="text-left relative">
                     Amazing Fisrt Title 
+                    <p style="font-size: 12px;">Jan 29,2018</p>
                 </div>
-                <p>Jan 29,2018</p>
                 <div>
                 </div>
                  
@@ -28,9 +28,9 @@
                     <img src="https://images.pexels.com/photos/631954/pexels-photo-631954.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="pic2">
                 </div>
                 <div class="text-center">
-                    Amazing Second Title that is quite long
+                    Amazing Second Title that is Quite Long
+                    <p  style="font-size: 12px;">Jan 29,2018</p>
                 </div>
-                <p>Jan 29,2018</p>
             </div>
 
             <div class="item-right inline-block relative">
@@ -39,8 +39,8 @@
                 </div>
                 <div class="text-right">
                     Amazing Title
+                    <p  style="font-size: 12px;">Jan 29,2018</p>
                 </div>
-                <p>Jan 29,2018</p>
             </div>
         </div>
     </div>
