--- a/HW8/ex1hw8.html
+++ b/HW8/ex1hw8.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="text-left relative">
                     Amazing Fisrt Title 
-                    <p style="font-size: 12px;">Jan 29,2018</p>
+                    <p style="font-size: 12px;">Jan 29, 2018</p>
                 </div>
                 <div>
                 </div>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="text-center">
                     Amazing Second Title that is Quite Long
-                    <p  style="font-size: 12px;">Jan 29,2018</p>
+                    <p  style="font-size: 12px;">Jan 29, 2018</p>
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
                 </div>
                 <div class="text-right">
                     Amazing Title
-                    <p  style="font-size: 12px;">Jan 29,2018</p>
+                    <p  style="font-size: 12px;">Jan 29, 2018</p>
                 </div>
             </div>
         </div>
